--- a/app/src/main/res/xml/fragment_shuffle_scene.xml
+++ b/app/src/main/res/xml/fragment_shuffle_scene.xml
@@ -6,7 +6,8 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="700">
+        motion:duration="400"
+        >
        <KeyFrameSet>
        </KeyFrameSet>
         <OnClick motion:targetId="@+id/shuffleBTN" />
@@ -22,7 +23,8 @@
             motion:layout_constraintHorizontal_bias="0.409"
             motion:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="4dp"
-            android:rotation="360" />
+            android:rotation="360"
+            />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
