--- a/app/src/main/res/layout/fragment_simple_path.xml
+++ b/app/src/main/res/layout/fragment_simple_path.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layoutDescription="@xml/fragment_simple_path_scene"
     tools:context=".cards.cardsUI.cardReadings.simplePathFrag.SimplePathFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <Button
             android:id="@+id/shuffleTBN"
@@ -38,6 +36,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/back_02"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/card01IV"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,5 +50,4 @@
             app:layout_constraintStart_toEndOf="@+id/card02IV"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
