--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -48,15 +48,15 @@
         android:label="fragment_readings_home"
         tools:layout="@layout/fragment_readings_home" >
         <action
-            android:id="@+id/action_readingsHomeFragment_to_simplePathFragment"
-            app:destination="@id/simplePathFragment" />
+            android:id="@+id/action_readingsHomeFragment_to_simplPathFragment"
+            app:destination="@id/simplPathFragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/simplePathFragment"
-        android:name="com.example.tarotappdb_01.cards.cardsUI.cardReadings.simplePathFrag.SimplePathFragment"
-        android:label="fragment_simple_path"
-        tools:layout="@layout/fragment_simple_path" />
+        android:id="@+id/simplPathFragment"
+        android:name="com.example.tarotappdb_01.cards.cardsUI.cardReadings.simplePathFrag.simplPathFragment"
+        android:label="fragment_simpl_path"
+        tools:layout="@layout/fragment_simpl_path" />
 
 
 </navigation>
