--- a/app/src/main/res/xml/fragment_little_cross_xml_shuffle_scene.xml
+++ b/app/src/main/res/xml/fragment_little_cross_xml_shuffle_scene.xml
@@ -6,6 +6,7 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
+        motion:autoTransition="animateToStart"
         motion:duration="700">
        <KeyFrameSet>
        </KeyFrameSet>
@@ -23,17 +24,9 @@
             motion:layout_constraintHorizontal_bias="0.154"
             motion:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="4dp"
-            android:rotation="360" />
-        <Constraint
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="28dp"
-            android:id="@+id/shuffleCross"
-            motion:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="28dp" />
+            android:rotation="360"
+            />
+
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
