Commit_021: große Fortschritte, einige Animationen sinnvoll und userfreundlich kombiniert (einige verworfen!!). Erstes Fragment (simpl_path) quasi fertig animiert.

--- a/app/src/main/res/layout/fragment_little_cross.xml
+++ b/app/src/main/res/layout/fragment_little_cross.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.motion.widget.MotionLayout
         android:id="@+id/laycards"
         android:layout_width="match_parent"
-        android:layout_height="258dp"
+        android:layout_height="wrap_content"
         app:layoutDescription="@xml/fragment_little_cross_xml_laycards_scene">
 
         <Button
@@ -62,4 +62,206 @@
             app:layout_constraintStart_toEndOf="@+id/shuffleCross"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.motion.widget.MotionLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/laying_are_cv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card02CV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="212dp"
+            android:outlineAmbientShadowColor="#AC6EF3"
+            app:cardBackgroundColor="#E8C7F6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/card2IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/p05"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/back02IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/back_02"
+                android:visibility="invisible" />
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/card01TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="It's about..."
+            app:layout_constraintEnd_toEndOf="@+id/card01CV"
+            app:layout_constraintStart_toStartOf="@+id/card01CV"
+            app:layout_constraintTop_toBottomOf="@+id/card01CV" />
+
+        <TextView
+            android:id="@+id/card01nrTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            app:layout_constraintBottom_toTopOf="@+id/card01CV"
+            app:layout_constraintEnd_toEndOf="@+id/card01CV"
+            app:layout_constraintStart_toStartOf="@+id/card01CV" />
+
+        <TextView
+            android:id="@+id/card02TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Do this"
+            app:layout_constraintEnd_toEndOf="@+id/card02CV"
+            app:layout_constraintStart_toStartOf="@+id/card02CV"
+            app:layout_constraintTop_toBottomOf="@+id/card02CV" />
+
+        <TextView
+            android:id="@+id/card03TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Don't do this"
+            app:layout_constraintEnd_toEndOf="@+id/card03CV"
+            app:layout_constraintStart_toStartOf="@+id/card03CV"
+            app:layout_constraintTop_toBottomOf="@+id/card03CV" />
+
+        <TextView
+            android:id="@+id/card02nrTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2"
+            app:layout_constraintBottom_toTopOf="@+id/card02CV"
+            app:layout_constraintEnd_toEndOf="@+id/card02CV"
+            app:layout_constraintStart_toStartOf="@+id/card02CV" />
+
+        <TextView
+            android:id="@+id/card03nrTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3"
+            app:layout_constraintBottom_toTopOf="@+id/card03CV"
+            app:layout_constraintEnd_toEndOf="@+id/card03CV"
+            app:layout_constraintStart_toStartOf="@+id/card03CV" />
+
+        <TextView
+            android:id="@+id/card04TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Future \nSurprise"
+            app:layout_constraintEnd_toEndOf="@+id/card04CV"
+            app:layout_constraintStart_toStartOf="@+id/card04CV"
+            app:layout_constraintTop_toBottomOf="@+id/card04CV" />
+
+        <TextView
+            android:id="@+id/card04nrTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4"
+            app:layout_constraintBottom_toTopOf="@+id/card04CV"
+            app:layout_constraintEnd_toEndOf="@+id/card04CV"
+            app:layout_constraintStart_toStartOf="@+id/card04CV" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card01CV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="44dp"
+            android:outlineAmbientShadowColor="#AC6EF3"
+            app:cardBackgroundColor="#E8C7F6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.499">
+
+            <ImageView
+                android:id="@+id/card1IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/s01"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/back01IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/back_02"
+                android:visibility="invisible" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card03CV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:outlineAmbientShadowColor="#AC6EF3"
+            app:cardBackgroundColor="#E8C7F6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/card02CV">
+
+            <ImageView
+                android:id="@+id/card3IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/p05"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/back03IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/back_02"
+                android:visibility="invisible" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card04CV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="44dp"
+            android:outlineAmbientShadowColor="#AC6EF3"
+            app:cardBackgroundColor="#E8C7F6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/card04IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/m08_strength"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/back04IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/back_02"
+                android:visibility="invisible" />
+
+        </androidx.cardview.widget.CardView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 </FrameLayout>
