--- a/app/src/main/res/layout/fragment_simpl_path.xml
+++ b/app/src/main/res/layout/fragment_simpl_path.xml
@@ -12,6 +12,60 @@
         android:layout_height="match_parent">
 
 
+        <TextView
+            android:id="@+id/card01TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Past"
+            app:layout_constraintEnd_toEndOf="@+id/card01CV"
+            app:layout_constraintStart_toStartOf="@+id/card01CV"
+            app:layout_constraintTop_toBottomOf="@+id/card01CV" />
+
+        <TextView
+            android:id="@+id/card01nrTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            app:layout_constraintBottom_toTopOf="@+id/card01CV"
+            app:layout_constraintEnd_toEndOf="@+id/card01CV"
+            app:layout_constraintStart_toStartOf="@+id/card01CV" />
+
+        <TextView
+            android:id="@+id/card02TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Presence"
+            app:layout_constraintEnd_toEndOf="@+id/card02CV"
+            app:layout_constraintStart_toStartOf="@+id/card02CV"
+            app:layout_constraintTop_toBottomOf="@+id/card02CV" />
+
+        <TextView
+            android:id="@+id/card02nrTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2"
+            app:layout_constraintBottom_toTopOf="@+id/card02CV"
+            app:layout_constraintEnd_toEndOf="@+id/card02CV"
+            app:layout_constraintStart_toStartOf="@+id/card02CV" />
+
+        <TextView
+            android:id="@+id/card04TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Future"
+            app:layout_constraintEnd_toEndOf="@+id/card04CV"
+            app:layout_constraintStart_toStartOf="@+id/card04CV"
+            app:layout_constraintTop_toBottomOf="@+id/card04CV" />
+
+        <TextView
+            android:id="@+id/card04nrTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3"
+            app:layout_constraintBottom_toTopOf="@+id/card04CV"
+            app:layout_constraintEnd_toEndOf="@+id/card04CV"
+            app:layout_constraintStart_toStartOf="@+id/card04CV" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/card01CV"
             android:layout_width="wrap_content"
@@ -61,10 +115,18 @@
                 android:src="@drawable/p05"
                 android:visibility="invisible" />
 
+            <ImageView
+                android:id="@+id/back02IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/back_02"
+                android:visibility="invisible" />
+
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/card03CV"
+            android:id="@+id/card04CV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="44dp"
@@ -75,11 +137,19 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/cardIV"
+                android:id="@+id/card03IV"
                 android:layout_width="60dp"
                 android:layout_height="100dp"
                 android:padding="4dp"
                 android:src="@drawable/m08_strength"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/back03IV"
+                android:layout_width="60dp"
+                android:layout_height="100dp"
+                android:padding="4dp"
+                android:src="@drawable/back_02"
                 android:visibility="invisible" />
 
         </androidx.cardview.widget.CardView>
