--- a/app/src/main/res/xml/fragment_little_cross_xml_laycards_scene.xml
+++ b/app/src/main/res/xml/fragment_little_cross_xml_laycards_scene.xml
@@ -10,7 +10,7 @@
         <KeyFrameSet>
 
         </KeyFrameSet>
-        <OnClick motion:targetId="@+id/layCrossBTN" /> -->
+        <OnClick motion:targetId="@+id/layCrossBTN" />
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
